# cosmicpython-study

./: README.md  pyproject.toml  pytest.ini
pt1/ch01/: README.md  model.py  test_batches.py  test_model.py  test_value_objects.py
pt1/ch02/: README.md  app.py  conftest.py  model.py  orm.py  repository.py  test_allocate.py  test_app.py  test_repository.py
pt1/ch03/: README.md
pt1/ch03/it01/: sync.py  test_sync.py
pt1/ch03/it02/: sync.py  test_sync.py
pt1/ch04/: README.md  container.py
pt1/ch04/adapters/: orm.py  postgres.py  repository.py
pt1/ch04/entrypoints/: app.py
pt1/ch04/service_layer/: services.py
pt1/ch04/tests/: conftest.py
pt1/ch04/tests/e2e/: conftest.py  test_app.py
pt1/ch04/tests/integration/: test_orm.py  test_repository.py
pt1/ch04/tests/unit/: test_allocate.py  test_batches.py  (+1 more)
pt1/ch05/: README.md  container.py
pt1/ch05/adapters/: orm.py  postgres.py  repository.py
pt1/ch05/domain/: model.py
pt1/ch05/entrypoints/: app.py
pt1/ch05/service_layer/: services.py
pt1/ch05/tests/: conftest.py
pt1/ch06/: README.md  config.py  container.py
pt1/ch06/tests/: conftest.py
pt1/ch07/: README.md  container.py  docker-compose.yml
pt1/ch07/tests/: conftest.py
pt2/ch08/: README.md  container.py
pt2/ch08/tests/: conftest.py
pt2/ch09/: README.md  container.py
pt2/ch09/tests/: conftest.py
pt2/ch10/: README.md  container.py
pt2/ch10/tests/: conftest.py
pt2/ch11/: README.md  container.py  docker-compose.yml
pt2/ch11/tests/: conftest.py
pt2/ch12/: README.md  config.py  container.py
pt2/ch12/tests/: conftest.py
(+135 files in other folders)
