[tool.poetry]
name = "cosmic-python"
version = "0.1.0"
description = ""
authors = ["Seongeun Yu <s3ich4n@gmail.com>"]
readme = "README.md"
packages = [{include = "cosmic_python"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = {extras= ["asyncio"], version = "^1.4.47"}
asyncpg = "^0.27.0"
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
aiosqlite = "^0.18.0"
httpx = "^0.24.0"
asgi-lifespan = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
